[package]
authors = ["chessnokov"]
edition = "2018"
readme = "README.md"
name = "pfm"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

stm32f7 = { version = "0.14", features = ["rt", "stm32f7x7"] }

# this lets you use `cargo fix`!
[[bin]]
name = "pfm"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
