[package]
authors = ["chessnokov"]
edition = "2018"
readme = "README.md"
name = "pfm"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
stm32f7xx-hal = { version = "0.7", features = ["stm32f767", "rt"] }

[[bin]]
name = "pfm"
path = "bin/pfm.rs"

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
